Cambios en la seccion team del index.

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,9 +71,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-12">
-            <div class="row">
-                <div class="col-xl-3 col-md-6">
+        <div class="row justify-content-center">
+            <div class="col-md-4 col-sm-6 mb-4">
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex align-start mb-3">
@@ -82,8 +81,8 @@
                                 </div>
                             </div>
                             <div class="text-center mb-3">
-                                <img src="{{ url_for('static', filename='images/team_01.jpg') }}" alt="" class="avatar-md rounded-circle" />
-                                <h6 class="font-size-15 mt-3 mb-1">Cheems</h6>
+                                <img src="{{ url_for('static', filename='images/daniel.jpg') }}" alt="" class="avatar-md rounded-circle" />
+                                <h6 class="font-size-15 mt-3 mb-1">Daniel Labrada</h6>
                                 <p class="mb-0 text-muted">Gerente general</p>
                             </div>
                             <div class="mt-4 pt-1">
@@ -92,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-md-4 col-sm-6 mb-4">
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex align-start mb-3">
@@ -101,8 +100,8 @@
                                 </div>
                             </div>
                             <div class="text-center mb-3">
-                                <img src="{{ url_for('static', filename='images/team_02.jpg') }}" alt="" class="avatar-md rounded-circle" />
-                                <h6 class="font-size-15 mt-3 mb-1">Don Chemmpe</h6>
+                                <img src="{{ url_for('static', filename='images/luis.jpg') }}" alt="" class="avatar-md rounded-circle" />
+                                <h6 class="font-size-15 mt-3 mb-1">Luis Blasco</h6>
                                 <p class="mb-0 text-muted">Gerente de logística</p>
                             </div>
                             <div class="mt-4 pt-1">
@@ -111,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-md-4 col-sm-6 mb-4">
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex align-start mb-3">
@@ -120,8 +119,8 @@
                                 </div>
                             </div>
                             <div class="text-center mb-3">
-                                <img src="{{ url_for('static', filename='images/team_03.jpg') }}" alt="" class="avatar-md rounded-circle" />
-                                <h6 class="font-size-15 mt-3 mb-1">Juan Nito</h6>
+                                <img src="{{ url_for('static', filename='images/emiliano.jpg') }}" alt="" class="avatar-md rounded-circle" />
+                                <h6 class="font-size-15 mt-3 mb-1">Emiliano Bojorquez</h6>
                                 <p class="mb-0 text-muted">Desarrollador de software</p>
                             </div>
                             <div class="mt-4 pt-1">
@@ -130,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-md-4 col-sm-6 mb-4">
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex align-start mb-3">
@@ -139,9 +138,28 @@
                                 </div>
                             </div>
                             <div class="text-center mb-3">
-                                <img src="{{ url_for('static', filename='images/team_04.jpg') }}" alt="" class="avatar-md rounded-circle" />
-                                <h6 class="font-size-15 mt-3 mb-1">El Brayan</h6>
+                                <img src="{{ url_for('static', filename='images/mario.jpg') }}" alt="" class="avatar-md rounded-circle" />
+                                <h6 class="font-size-15 mt-3 mb-1">Mario Le Blohic</h6>
                                 <p class="mb-0 text-muted">Community Manager</p>
+                            </div>
+                            <div class="mt-4 pt-1">
+                                <a href="https://www.facebook.com/" target="_blank" class="btn btn-soft-success d-block">Ver perfil</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex align-start mb-3">
+                                <div class="flex-grow-1">
+                                    <span class="badge badge-soft-dark">El más pendejo</span>
+                                </div>
+                            </div>
+                            <div class="text-center mb-3">
+                                <img src="{{ url_for('static', filename='images/miguel.jpg') }}" alt="" class="avatar-md rounded-circle" />
+                                <h6 class="font-size-15 mt-3 mb-1">Miguel Devora</h6>
+                                <p class="mb-0 text-muted">Gerente de base de datos</p>
                             </div>
                             <div class="mt-4 pt-1">
                                 <a href="https://www.facebook.com/" target="_blank" class="btn btn-soft-success d-block">Ver perfil</a>
