--- a/templates/envios.html
+++ b/templates/envios.html
@@ -1,6 +1,72 @@
 {% include 'header.html' %}
-<div>
-    <h1>Página de Envíos</h1>
-    <p>Aquí se gestionan los envíos.</p>
-</div>
+<section class="section">
+    <div class="bg-overlay bg-primary back-presentation"></div>
+    <div class="container">
+        
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="d-sm-flex align-items-center justify-content-between">
+                        <div class="d-flex">
+                            <div class="flex-grow-1 align-self-center">
+                                <div class="text-muted">
+                                    <h5 class="mb-1 title-page">REGISTRO DE ENVÍOS</h5>
+                                    <p class="mb-0">Administración de los registros de envíos</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="page-title-right">
+                            <div class="d-flex flex-wrap gap-2">
+                                <div class="clearfix mt-4 mt-lg-0">
+                                    <a onclick="registrar(0)" class="btn btn-success waves-effect btn-label waves-light"><i class="bx bx-plus-medical label-icon"></i> Agregar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr class="mt-2">
+                    <div class="table-responsive">
+                        <table class="table table-striped mb-0">
+
+                            <thead>
+                                <tr>
+                                    <th>Número de paquete</th>
+                                    <th>Ciudad de origen</th>
+                                    <th>Ciudad de destino</th>
+                                    <th>Fecha de envio</th>
+                                    <th>Remitente</th>
+                                    <th>Destinatario</th>
+                                    <th>Guía</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for e in envios  %}
+                                 <tr>
+                                    <td>{{ e.id }}</td>
+                                    <td>{{ e.origen }}</td>
+                                    <td>{{ e.destino }}</td>
+                                    <td>{{ e.fecha_envio }}</td>
+                                    <td>{{ e.remitente }}</td>
+                                    <td>{{ e.destinatario }}</td>
+                                    <td>{{ e.guia }}</td>
+                                    <td>
+                                        <div class="btn-group me-2 mb-2 mb-sm-0 font-size-16">
+                                            <a onclick="registrar({{ c.id }})" class="btn btn-info waves-light waves-effect"><i class="fas fa-pen"></i></a>
+                                            <a onclick="eliminar({{ c.id }})" class="btn btn-danger waves-light waves-effect"><i class="far fa-trash-alt"></i></a>
+                                        </div>
+                                    </td>
+                                 </tr>
+                                {% else %}
+                                <tr>
+                                    <td colspan="3">No hay registros disponibles</td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<script src="{{ url_for('static', filename='js/cheems/envio.js') }}"></script>
 {% include 'footer.html' %} 
