Correccion en lineas 53 y 54

--- a/templates/envios.html
+++ b/templates/envios.html
@@ -50,8 +50,8 @@
                                     <td>{{ e.guia }}</td>
                                     <td>
                                         <div class="btn-group me-2 mb-2 mb-sm-0 font-size-16">
-                                            <a onclick="registrar({{ c.id }})" class="btn btn-info waves-light waves-effect"><i class="fas fa-pen"></i></a>
-                                            <a onclick="eliminar({{ c.id }})" class="btn btn-danger waves-light waves-effect"><i class="far fa-trash-alt"></i></a>
+                                            <a onclick="registrar({{ e.id }})" class="btn btn-info waves-light waves-effect"><i class="fas fa-pen"></i></a>
+                                            <a onclick="eliminar({{ e.id }})" class="btn btn-danger waves-light waves-effect"><i class="far fa-trash-alt"></i></a>
                                         </div>
                                     </td>
                                  </tr>
