Correcciones en app.py  envio.js

--- a/templates/envio.html
+++ b/templates/envio.html
@@ -48,7 +48,7 @@
         </div>
         <div class="modal-footer">
             <a class="btn btn-light" data-bs-dismiss="modal">Cerrar</a>
-            <a onclick="save()" class="btn btn-info">Guardar</a>
+            <a onclick="save_envio()" class="btn btn-info">Guardar</a>
         </div>
     </div>
 </div>
