--- a/templates/ciudad.html
+++ b/templates/ciudad.html
@@ -24,7 +24,7 @@
         </div>
         <div class="modal-footer">
             <a class="btn btn-light" data-bs-dismiss="modal">Cerrar</a>
-            <a onclick="save()" class="btn btn-info">Guardar</a>
+            <a onclick="save_ciudad()" class="btn btn-info">Guardar</a>
         </div>
     </div>
 </div>
