agregada funcion delete en ciudad

--- a/templates/envio.html
+++ b/templates/envio.html
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="mb-3">
-                        <label for="form-codigo" class="form-label">Guia (10 digitos):</label>
+                        <label for="form-codigo" class="form-label">Guía [10 dígitos]:</label>
                         <input type="text" class="form-control" id="form-guia" value="">
                     </div>
                 </div>
