--- a/templates/ciudad.html
+++ b/templates/ciudad.html
@@ -7,6 +7,7 @@
         <div class="modal-body">
             <div class="row">
                 <div class="col-md-12">
+                    <input type="hidden" id="form-id" value="">
                     <div class="mb-3">
                         <label for="form-nombre" class="form-label">Nombre:</label>
                         <input type="text" class="form-control" id="form-nombre" value="">
