Se hizo 100% funcional la tabla de rastreo, se finalizo el proyecto.

--- a/templates/rastreos.html
+++ b/templates/rastreos.html
@@ -29,7 +29,7 @@
                             <tbody>
                                 {% for r in rastreos  %}
                                  <tr>
-                                    <td>{{ r.locacion }}</td>
+                                    <td>{{ r.codigo }}</td>
                                     <td>{{ r.fecha }}</td>
                                     <td>{{ r.estado }}</td>
                                  </tr>
